# hydrasdk-demo-android

./: README.md  SDK-CHANGES.MD  SDK-MIGRATION.MD  SDK-README.MD  build.gradle  demo.keystore  gradle.properties  jira.metadata.json  script-git-version.gradle  settings.gradle
.circleci/: config.yml
.github/workflows/: .codeql.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/anchorfree/hydrasdk/: HydraSDKConfigFactory.java
app/src/main/java/com/northghost/hydraclient/: CustomLogger.java  MainApplication.java  MainApplication.kt
app/src/main/java/com/northghost/hydraclient/activity/: MainActivity.java  UIActivity.java
app/src/main/java/com/northghost/hydraclient/adapter/: RegionListAdapter.java
app/src/main/java/com/northghost/hydraclient/dialog/: LoginDialog.java  RegionChooserDialog.java
app/src/main/java/com/northghost/hydraclient/extensions/: ActivityExtensions.kt
app/src/main/java/com/northghost/hydraclient/utils/: Converter.java
app/src/main/res/drawable/: btn_bkg.xml
app/src/main/res/layout/: activity_main.xml  dialog_login.xml  dialog_region_chooser.xml  region_list_item.xml
app/src/main/res/raw/: sdk_deps.json
app/src/main/res/values/: bools.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: data_extraction_rules.xml
ci/: hockeyapp-release.sh
detectfrida/: build.gradle.kts
detectfrida/src/androidTest/java/co/pango/detectfrida/: ExampleInstrumentedTest.kt
detectfrida/src/main/c/: CMakeLists.txt  native-lib.c
detectfrida/src/main/java/co/pango/detectfrida/: DetectFrida.kt
detectfrida/src/test/java/co/pango/detectfrida/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/hydrasdk-rx/: build.gradle
libs/hydrasdk-rx/src/androidTest/java/com/anchorfree/hydrasdk/rx/: ExampleInstrumentedTest.java
libs/hydrasdk-rx/src/main/: AndroidManifest.xml
libs/hydrasdk-rx/src/main/java/com/anchorfree/hydrasdk/rx/: CnlExtensions.kt  (+3 more)
(+1 files in other folders)
